// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Orden Status Badge Component Snapshot Testing Verify when a number 0 is passed as estatus prop 1`] = `
<span
  className="badge badge-danger"
>
  pendiente
</span>
`;

exports[`Orden Status Badge Component Snapshot Testing Verify when a number 1 is passed as estatus prop 1`] = `
<span
  className="badge badge-success"
>
  completado
</span>
`;

exports[`Orden Status Badge Component Snapshot Testing Verify when no props are provided 1`] = `
<span
  className="badge badge-danger"
>
  pendiente
</span>
`;
